# semantic_segmentation_publisher

./: .gitignore  CMakeLists.txt  package.xml
launch/: semantic_publisher.launch
msg/: BowQueries.msg
rviz/: tesse_rviz.rviz
src/: image_advertizing.py  layers copy.py  python_backup.py  semantic_segmentation.py
src/data/: ade150_config.mat  object150_info.csv
